WebVR: Fix missing sample collection for prediction timing

The pose latency prediction was not collecting data samples due to an
incomplete cherry-pick, so it was stuck using the fallback values of 16ms each
for JS and render latency.

BUG=733449

Review-Url: https://codereview.chromium.org/2941913002
Cr-Commit-Position: refs/heads/master@{#479565}

Former-commit-id: f1324c8312f7c716474ef43c9b3de89f1095d694